force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Contact_Display__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Contact_Display__c</fullName>
    <description>A link to the Contact record associated with this potential duplicate record.</description>
    <formula>HYPERLINK( &apos;/&apos; &amp; SFSSDupeCatcher__Contact__c, SFSSDupeCatcher__Contact__r.FirstName &amp; IF(SFSSDupeCatcher__Contact__r.FirstName &lt;&gt; &apos;&apos;, &apos; &apos;, &apos;&apos; ) &amp; SFSSDupeCatcher__Contact__r.LastName, &apos;_self&apos;) &amp; IF( AND( SFSSDupeCatcher__Contact__r.AccountId &lt;&gt; &apos;&apos;, NOT( ISNULL( SFSSDupeCatcher__Contact__r.AccountId ) ) ), &apos; at &apos; &amp; HYPERLINK( &apos;/&apos; &amp; SFSSDupeCatcher__Contact__r.AccountId, SFSSDupeCatcher__Contact__r.Account.Name, &apos;_self&apos; ), &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A link to the Contact record associated with this potential duplicate record.</inlineHelpText>
    <label>Contact Record</label>
    <type>Text</type>
</CustomField>