force-app/main/default/objects/SFSSDupeCatcher__Potential_Duplicate__c/fields/SFSSDupeCatcher__Phone__c.field-meta.xml
<CustomField>
    <fullName>SFSSDupeCatcher__Phone__c</fullName>
    <description>The phone number of the duplicate lead/contact/account.</description>
    <formula>CASE( SFSSDupeCatcher__Object_Type__c, &apos;Account&apos;, SFSSDupeCatcher__Account__r.Phone, &apos;Contact&apos;, SFSSDupeCatcher__Contact__r.Phone, &apos;Lead&apos;, SFSSDupeCatcher__Lead__r.Phone, &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The phone number of the duplicate lead/contact/account.</inlineHelpText>
    <label>Phone</label>
    <type>Text</type>
</CustomField>